Fix styles to prevent clipping on LabeledField focus highlight

--- a/src/components/LabeledField/LabeledField.scss
+++ b/src/components/LabeledField/LabeledField.scss
@@ -16,8 +16,6 @@
   }
 
   .content {
-    margin-left: calc(24px + 1em);
-    padding: 8px 0 18px 0;
-    overflow: scroll;
+    margin-left: calc(16px + 1em);
   }
 }
